Made the Family button work, still trying to get the About button to work(Expand and collapse) Also the Before and After buttons go at the same time, trying to figure out how to fix that

--- a/css/main.css
+++ b/css/main.css
@@ -256,7 +256,8 @@ button {
 }
 
 .family {
-  height: 12em;
+  height: 10em;
+  right: -13em;
   top: calc(50% - 50px);
   width: 10em;
 
@@ -266,6 +267,7 @@ button {
 
 .js-family-hide {
     opacity: 100;
+    right: 2em;
 }
 
 @media only screen and (min-width: 25em) {
